--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <header>
-            <img src="logo.PNG" alt="FireArena BD" class="logo">
-            <h2>FireArena BD টুর্নামেন্ট অ্যাপ ডাউনলোড করুন</h2>
-                <p>অংশগ্রহণ করতে অফিসিয়াল টুর্নামেন্ট অ্যাপ ডাউনলোড করুন</p>
+            <img src="logo.PNG" alt="SK NAHIM YT" class="logo">
+            <h2>SK NAHIM YT  টপ আপ apps ডাউনলোড করুন</h2>
+                <p>অংশগ্রহণ করতে অফিসিয়াল Top Up অ্যাপ ডাউনলোড করুন</p>
                 <button id="downloadBtn" class="download-button">
                     <span class="button-text">ডাউনলোড করুন</span>
                     <span class="button-icon"></span>
