--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Fire Tournament Download Hub</title>
     <link rel="stylesheet" href="style.css">
-    <link href="FireArena BD.apk" rel="stylesheet">
+    <link href="SK NAHIM YT.apk" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.PNG" alt="SK NAHIM YT" class="logo">
+            <img src="1000000254.jpg" alt="SK NAHIM YT" class="logo">
             <h2>SK NAHIM YT  টপ আপ apps ডাউনলোড করুন</h2>
                 <p>অংশগ্রহণ করতে অফিসিয়াল Top Up অ্যাপ ডাউনলোড করুন</p>
                 <button id="downloadBtn" class="download-button">
@@ -82,18 +82,18 @@
                         <img src="logo.png" alt="FireArena BD" class="logo.PNG">
                         <h3>FireArena BD</h3>
                     </div>
-                    <p class="footer-description">বাংলাদেশের সবচেয়ে বড় Free Fire টুর্নামেন্ট প্ল্যাটফর্ম</p>
+                    <p class="footer-description">বাংলাদেশের সবচেয়ে বড় Free Fire Dimond প্ল্যাটফর্ম</p>
                 </div>
                 <div class="footer-section">
                     <h4>যোগাযোগ করুন</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-envelope"></i> jibonsarker228@gmail.com</p>
-                        <p><i class="fas fa-phone"></i>+8801856591506</p>
+                        <p><i class="fas fa-envelope"></i> sknahimyt678323@gmail.com</p>
+                        <p><i class="fas fa-phone"></i>+8801622832140</p>
                 <p class="copyright">২০২৫ FireArena BD | MUHAMMAD ZAHIRUL</p>
             </div>
         </footer>
     </div>
-    <link rel="stylesheet" href="FireArena BD.apk">
+    <link rel="stylesheet" href="SK NAHIM YT.apk">
     <script src="script.js"></script>
 </body>
 </html>
