--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <h1>Sk Nahim Yt Freefire TuopUp Apps</h1>
     <a href="SK NAHIM YT SHOPS.apk" class="download-btn"> Download Now</a>
   </div>  <div id="hscroll1" class="screenshots">
-    <img src="ZAHIRUL1.PNG" alt="Screenshot 1">
-    <img src="ZAHIRUL2.PNG" alt="Screenshot 2">
-    <img src="ZAHIRUL3.PNG" alt="Screenshot 3">
-    <img src="ZAHIRUL4.PNG" alt="Screenshot 4">
-    <img src="ZAHIRUL5.PNG" alt="Screenshot 5">
+    <img src="NAHIM1.PNG" alt="Screenshot 1">
+    <img src="NAHIM2.PNG" alt="Screenshot 2">
+    <img src="NAHIM3.PNG" alt="Screenshot 3">
+    <img src="NAHIM4.PNG" alt="Screenshot 4">
+    <img src="NAHIM4.PNG" alt="Screenshot 5">
   </div>  <footer>
     <div class="contact-info">
        sknahimyt678323@gmail.com<br>
